# zoom-mqtt-bridge

./: .gitignore  pyproject.toml  zoom-mqtt-bridge.service
app/: __main__.py  model.py
